# heart-vis

./: README.md  pyproject.toml  requirements.txt
data/: aspire_dummy_data.xlsx  example_data.xlsx  processed_aspire_data.xlsx  processed_data.xlsx
notebooks/: create-tables.sql  explore.ipynb  loading-tables.ipynb  practice-classes.ipynb
