[project]
name = "heart-vis"
version = "0.1.0"
description = ""
authors = [
    {name = "Mahwish M",email = "mahwishm95@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "postgres (>=4.0,<5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

